# port_pilot

./: .gitignore  README.md  installer.iss  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  release.yml
_project_init/: MASTER_BLUEPRINT.md  plan.md
_project_init/logs_53420240610/: 0_Test (macos-latest).txt  1_Test (windows-latest).txt  2_Test (ubuntu-latest).txt  3_Lint.txt
_project_init/logs_53420240610/Lint/: 12_Post Run actions_checkout@v4.txt  13_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install dependencies.txt  5_Run Ruff.txt  6_Run MyPy.txt  system.txt
_project_init/logs_53420240610/Test (macos-latest)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  5_Install dependencies.txt  6_Run tests.txt  system.txt
_project_init/logs_53420240610/Test (ubuntu-latest)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  4_Install system dependencies (Linux).txt  5_Install dependencies.txt  6_Run tests.txt  system.txt
_project_init/logs_53420240610/Test (windows-latest)/: 14_Post Run actions_checkout@v4.txt  15_Complete job.txt  1_Set up job.txt  2_Run actions_checkout@v4.txt  3_Set up Python.txt  5_Install dependencies.txt  6_Run tests.txt  system.txt
docs/: USER_GUIDE.md
resources/: tunnels.json
resources/icons/: README.md
scripts/: build_linux.sh  build_macos.sh  build_windows.ps1
src/: main.py
src/core/: __init__.py  port_scanner.py  process_killer.py  tunnel_manager.py  version.py
src/ui/: __init__.py  dashboard.py  splash_screen.py  tray_icon.py
src/ui/styles/: dark_theme.qss
src/ui/widgets/: __init__.py  port_table.py  tunnel_list.py
src/utils/: __init__.py  config.py  platform_utils.py  updater.py
tests/: conftest.py
tests/integration/: test_e2e_workflow.py  test_tray_integration.py
tests/unit/: test_port_scanner.py  test_process_killer.py  test_tunnel_manager.py
